# idk_gfx

./: .gitmodules  CMakeLists.txt  README.md  slangc.sh
asset/: GfxService.cfg  gfx.cfg
asset/shader/: automata.slang  default_gpass.slang  nbody.slang  nbody_gravity.slang  nbody_position.slang  nbody_render.slang  screenquad.slang
assets/: GfxService.cfg
assets/gfx/shader/: automata.slang  clear.slang  colorgrade.frag  default_gpass.slang  nbody_expansion.slang  nbody_gravity.slang  nbody_position.slang  nbody_render.slang  particles.comp  screenquad.frag  screenquad.slang  screenquad.vert
assets/shader/: automata.slang  clear.slang  colorgrade.frag  default_gpass.slang  particles.comp  particles.slang  screenquad.slang  screenquad.vert  storage_ubo.glsl  zzz.txt
assets/shader-old/: default_gpass.slang  particles2.slang  screenquad.frag  screenquad.vert  screenquad2.slang  storage_ssbo.glsl
assets/shader/h/: bindless_texture.slang  storage.slang  types.slang
data/gfx/shader/: nbody_expansion.slang  nbody_position.slang  screenquad.slang
h/idk/: GfxService.hpp  gfx.hpp  gfx_api.hpp  gfx_service.hpp  gfxapi.hpp  idk_gfx.hpp  slang.hpp  slang_claude.hpp
h/idk/gfx/: buffer.hpp  camera.hpp  controller.hpp  framebuffer.hpp  fwd.hpp  gfx.hpp  gl_bindings.hpp  gl_renderer.hpp  mesh.hpp  render_interface.hpp  renderer.hpp  renderer_opengl.hpp  shader.hpp  slang.hpp  slang.slang  slang_bindings.hpp  texture.hpp  underlyingtype.hpp  window.hpp
h/idk/gfxtools/: gfxtools.hpp
h/idk/slang/: defs.hpp  defs.slang
h/idk_gfx/: GfxService.hpp  buffer.hpp  controller.hpp  framebuffer.hpp  fwd.hpp  gl_bindings.hpp  mesh.hpp  render_interface.hpp  renderer.hpp  shader.hpp  slang.hpp  texture.hpp  window.hpp
h/idk_gfx/slang/: defs.hpp  defs.slang  slang_claude.hpp
h_/idk_gfx/: buffer_object.hpp  mesh.hpp  model.hpp
src/: GfxService.cpp  buffer.cpp  controller.cpp  debug.cpp  framebuffer.cpp  gfx.cpp  gfx_api.cpp  gfx_service.cpp  gfxapi.cpp  gl_renderer.cpp  idk_gfxapi.cpp  model.cpp  renderer.cpp  renderer_opengl.cpp  shader.cpp  texture.cpp  underlyingtype.cpp  window.cpp
src/gfx/: model.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
src/idk_config/: Memory.hpp
src/idk_gfx/: New.hpp  buffer_object.cpp  gfxtools.cpp  mesh.cpp
